3517
I do understand why this and similar code won't compile (two nodes vs. one), but the compiler message is a bit cryptic, I think.

{code} 
scala> val test = true match { case true => <br/><br/> case false => <br/> }

<console>:7: error: kinds of the type arguments (Seq[Any]) do not conform to the expected
kinds of the type parameters (type CC) in class GenericCompanion.
Seq[Any]'s type parameters do not match type CC's expected parameters: trait Seq has one
type parameter, but type CC has one
       val test = true match { case true => <br/><br/> case false => <br/> }
           ^
{code} 
